crates/phux-client-core/src/multi_pane/snapshots/phux_client_core__multi_pane__tests__three_pane_cross_80x24_focus_top_left.snap
---
source: crates/phux-client-core/src/multi_pane/mod.rs
expression: grid
---
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb┃ccccccccccccccccccccccccccccccccccccccc
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb┃ccccccccccccccccccccccccccccccccccccccc
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb┃ccccccccccccccccccccccccccccccccccccccc
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb┃ccccccccccccccccccccccccccccccccccccccc
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb┃ccccccccccccccccccccccccccccccccccccccc
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb┃ccccccccccccccccccccccccccccccccccccccc
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb┃ccccccccccccccccccccccccccccccccccccccc
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb┃ccccccccccccccccccccccccccccccccccccccc
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb┃ccccccccccccccccccccccccccccccccccccccc
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb┃ccccccccccccccccccccccccccccccccccccccc
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb┃ccccccccccccccccccccccccccccccccccccccc
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb┃ccccccccccccccccccccccccccccccccccccccc
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┫ccccccccccccccccccccccccccccccccccccccc
dddddddddddddddddddddddddddddddddddddddd┃ccccccccccccccccccccccccccccccccccccccc
dddddddddddddddddddddddddddddddddddddddd┃ccccccccccccccccccccccccccccccccccccccc
dddddddddddddddddddddddddddddddddddddddd┃ccccccccccccccccccccccccccccccccccccccc
dddddddddddddddddddddddddddddddddddddddd┃ccccccccccccccccccccccccccccccccccccccc
dddddddddddddddddddddddddddddddddddddddd┃ccccccccccccccccccccccccccccccccccccccc
dddddddddddddddddddddddddddddddddddddddd┃ccccccccccccccccccccccccccccccccccccccc
dddddddddddddddddddddddddddddddddddddddd┃ccccccccccccccccccccccccccccccccccccccc
dddddddddddddddddddddddddddddddddddddddd┃ccccccccccccccccccccccccccccccccccccccc
dddddddddddddddddddddddddddddddddddddddd┃ccccccccccccccccccccccccccccccccccccccc
dddddddddddddddddddddddddddddddddddddddd┃ccccccccccccccccccccccccccccccccccccccc
dddddddddddddddddddddddddddddddddddddddd┃ccccccccccccccccccccccccccccccccccccccc
